; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_sec.c_btm_sec_bond_cancel_complete.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_sec.c_btm_sec_bond_cancel_complete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, i64, %struct.TYPE_5__, i32 }
%struct.TYPE_5__ = type { i32 (i32)* }
%struct.TYPE_6__ = type { i32 }

@btm_cb = common dso_local global %struct.TYPE_7__ zeroinitializer, align 8
@BTM_PAIR_FLAGS_DISC_WHEN_DONE = common dso_local global i32 0, align 4
@BTM_PAIR_STATE_WAIT_LOCAL_PIN = common dso_local global i64 0, align 8
@BTM_PAIR_FLAGS_WE_STARTED_DD = common dso_local global i32 0, align 4
@BTM_PAIR_STATE_GET_REM_NAME = common dso_local global i64 0, align 8
@BTM_PAIR_FLAGS_WE_CANCEL_DD = common dso_local global i32 0, align 4
@BTM_SEC_NONE = common dso_local global i32 0, align 4
@BTM_PAIR_STATE_IDLE = common dso_local global i32 0, align 4
@BTM_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @btm_sec_bond_cancel_complete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @btm_sec_bond_cancel_complete() #0 {
  %1 = alloca %struct.TYPE_6__*, align 8
  %2 = load i32, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @btm_cb, i32 0, i32 0), align 8
  %3 = load i32, i32* @BTM_PAIR_FLAGS_DISC_WHEN_DONE, align 4
  %4 = and i32 %2, %3
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %24, label %6

6:                                                ; preds = %0
  %7 = load i64, i64* @BTM_PAIR_STATE_WAIT_LOCAL_PIN, align 8
  %8 = load i64, i64* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @btm_cb, i32 0, i32 1), align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %15

10:                                               ; preds = %6
  %11 = load i32, i32* @BTM_PAIR_FLAGS_WE_STARTED_DD, align 4
  %12 = load i32, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @btm_cb, i32 0, i32 0), align 8
  %13 = and i32 %11, %12
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %24, label %15

15:                                               ; preds = %10, %6
  %16 = load i64, i64* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @btm_cb, i32 0, i32 1), align 8
  %17 = load i64, i64* @BTM_PAIR_STATE_GET_REM_NAME, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %42

19:                                               ; preds = %15
  %20 = load i32, i32* @BTM_PAIR_FLAGS_WE_CANCEL_DD, align 4
  %21 = load i32, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @btm_cb, i32 0, i32 0), align 8
  %22 = and i32 %20, %21
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %42

24:                                               ; preds = %19, %10, %0
  %25 = load i32, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @btm_cb, i32 0, i32 3), align 8
  %26 = call %struct.TYPE_6__* @btm_find_dev(i32 %25)
  store %struct.TYPE_6__* %26, %struct.TYPE_6__** %1, align 8
  %27 = icmp ne %struct.TYPE_6__* %26, null
  br i1 %27, label %28, label %32

28:                                               ; preds = %24
  %29 = load i32, i32* @BTM_SEC_NONE, align 4
  %30 = load %struct.TYPE_6__*, %struct.TYPE_6__** %1, align 8
  %31 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %30, i32 0, i32 0
  store i32 %29, i32* %31, align 4
  br label %32

32:                                               ; preds = %28, %24
  %33 = load i32, i32* @BTM_PAIR_STATE_IDLE, align 4
  %34 = call i32 @btm_sec_change_pairing_state(i32 %33)
  %35 = load i32 (i32)*, i32 (i32)** getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @btm_cb, i32 0, i32 2, i32 0), align 8
  %36 = icmp ne i32 (i32)* %35, null
  br i1 %36, label %37, label %41

37:                                               ; preds = %32
  %38 = load i32 (i32)*, i32 (i32)** getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @btm_cb, i32 0, i32 2, i32 0), align 8
  %39 = load i32, i32* @BTM_SUCCESS, align 4
  %40 = call i32 %38(i32 %39)
  br label %41

41:                                               ; preds = %37, %32
  br label %42

42:                                               ; preds = %41, %19, %15
  ret void
}

declare dso_local %struct.TYPE_6__* @btm_find_dev(i32) #1

declare dso_local i32 @btm_sec_change_pairing_state(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
